--- a/ripple.config
+++ b/ripple.config
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<ripple xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+<ripple xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Name>validation</Name>
   <NugetSpecFolder>packaging/nuget</NugetSpecFolder>
   <SourceFolder>src</SourceFolder>
@@ -15,6 +15,7 @@
   <Nugets>
     <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" />
     <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.538" Mode="Float" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
