--- a/ripple.config
+++ b/ripple.config
@@ -15,17 +15,21 @@
   <Nugets>
     <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" />
     <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" />
+    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.378" Mode="Float" />
     <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.538" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.171" Mode="Float" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
+    <Dependency Name="Owin.Types" Version="0.8.5.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6" Mode="Fixed" />
     <Dependency Name="Selenium.RC" Version="2.33.0" Mode="Fixed" />
     <Dependency Name="Selenium.Support" Version="2.33.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriver" Version="2.33.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.33.0" Mode="Fixed" />
-    <Dependency Name="Serenity" Version="0.9.8.160" Mode="Float" />
+    <Dependency Name="Serenity" Version="0.9.8.175" Mode="Float" />
+    <Dependency Name="Storyteller2" Version="2.0.0.21" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
