--- a/src/FubuMVC.Validation/validation.asset.config
+++ b/src/FubuMVC.Validation/validation.asset.config
@@ -2,7 +2,7 @@ fubuvalidation.localization.js requires jquery, underscore
 fubuvalidation.rules.js requires fubuvalidation.localization.js
 fubuvalidation.core.js requires underscore, fubuvalidation.rules.js, continuations
 fubuvalidation.ui.js requires underscore, jquery, fubuvalidation.core.js
-fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js, continuations, jquery.continuations.forms.js
+fubuvalidation.plugin.js requires fubuvalidation.ui.js, fubuvalidation.core.js, continuations, fubucontinuations.jquery.forms.js
 
 fubuvalidation is fubuvalidation.plugin.js
 
