--- a/ripple.config
+++ b/ripple.config
@@ -16,8 +16,9 @@
     <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" />
     <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" />
     <Dependency Name="FubuMVC.Ajax" Version="0.1.0.378" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.1.0.1528" Mode="Float" />
     <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.538" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.171" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.172" Mode="Float" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
