little cleanup after bottles changes

--- a/ripple.config
+++ b/ripple.config
@@ -13,12 +13,24 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
+    <Dependency Name="Bottles" Version="2.0.0.576" Mode="Float" />
     <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" />
     <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" />
-    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.378" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.1.0.1528" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.538" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.172" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.2.0.272" Mode="Float" />
+    <Dependency Name="FubuDocs" Version="0.9.9.267" Mode="Float" />
+    <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Float" />
+    <Dependency Name="FubuMVC.Ajax" Version="0.1.0.462" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.560" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.611" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.579" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.0.0.579" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuMVC.TestingHarness" Version="1.2.0.1678" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="1.2.0.272" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
@@ -29,8 +41,9 @@
     <Dependency Name="Selenium.Support" Version="2.33.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriver" Version="2.33.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.33.0" Mode="Fixed" />
-    <Dependency Name="Serenity" Version="0.9.8.186" Mode="Float" />
-    <Dependency Name="Storyteller2" Version="2.0.0.21" Mode="Float" />
+    <Dependency Name="Serenity" Version="0.9.9.219" Mode="Float" />
+    <Dependency Name="Spark" Version="1.7.5.3" Mode="Float" />
+    <Dependency Name="Storyteller2" Version="2.0.0.42" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
