Adding an interface, IOverrideInputModelForWhenValidationFails, that can be applied to a validating input model to override the resulting input model. This helps when your input models are not the same

--- a/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
+++ b/src/FubuMVC.Validation.IntegrationTesting/FubuMVC.Validation.IntegrationTesting.csproj
@@ -136,6 +136,8 @@
   <ItemGroup>
     <Compile Include="Ajax\IntegratedAjaxEndpoint.cs" />
     <Compile Include="Ajax\IntegratedAjaxTester.cs" />
+    <Compile Include="LoFi_diff_models\IntegratedLoFi_diff_models_Endpoint.cs" />
+    <Compile Include="LoFi_diff_models\IntegratedLoFi_diff_models_Tester.cs" />
     <Compile Include="LoFi\IntegratedLoFiEndpoint.cs" />
     <Compile Include="LoFi\IntegratedLoFiTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
