fully passing against fubumvc 2.0

--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -189,6 +189,5 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
 </Project>
