--- a/src/FubuMVC.HelloValidation/ripple.dependencies.config
+++ b/src/FubuMVC.HelloValidation/ripple.dependencies.config
@@ -2,11 +2,9 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
-FubuMVC.Core.Assets
-FubuMVC.Core.UI
-FubuMVC.Core.View
 FubuMVC.Spark
 FubuMVC.StructureMap
 HtmlTags
+Owin
 Spark
 structuremap
