--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -43,15 +43,6 @@
     <Reference Include="FubuMVC.Core">
       <HintPath>..\packages\FubuMVC.Core\lib\net40\FubuMVC.Core.dll</HintPath>
     </Reference>
-    <Reference Include="FubuMVC.Core.Assets">
-      <HintPath>..\packages\FubuMVC.Core.Assets\lib\net40\FubuMVC.Core.Assets.dll</HintPath>
-    </Reference>
-    <Reference Include="FubuMVC.Core.UI">
-      <HintPath>..\packages\FubuMVC.Core.UI\lib\net40\FubuMVC.Core.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="FubuMVC.Core.View">
-      <HintPath>..\packages\FubuMVC.Core.View\lib\net40\FubuMVC.Core.View.dll</HintPath>
-    </Reference>
     <Reference Include="FubuMVC.StructureMap">
       <HintPath>..\packages\FubuMVC.StructureMap\lib\net40\FubuMVC.StructureMap.dll</HintPath>
     </Reference>
@@ -70,6 +61,9 @@
     </Reference>
     <Reference Include="nunit.mocks">
       <HintPath>..\packages\NUnit\lib\nunit.mocks.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="pnunit.framework">
       <HintPath>..\packages\NUnit\lib\pnunit.framework.dll</HintPath>
@@ -129,7 +123,6 @@
     <Compile Include="UI\MinValueModifierTester.cs" />
     <Compile Include="UI\CssValidationAnnotationStrategyTester.cs" />
     <Compile Include="UI\DateElementModifierTester.cs" />
-    <Compile Include="UI\DefaultValidationSummaryNodeTester.cs" />
     <Compile Include="UI\DefaultValidationSummaryWriterTester.cs" />
     <Compile Include="UI\FieldValidationElementModifierTester.cs" />
     <Compile Include="UI\FieldValidationModifierTester.cs" />
