--- a/src/FubuValidation.Docs/FubuValidation.Docs.csproj
+++ b/src/FubuValidation.Docs/FubuValidation.Docs.csproj
@@ -58,8 +58,7 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
   <ItemGroup>
     <None Include=".package-manifest" />
     <None Include="index.spark" />
