--- a/packaging/nuget/fubuvalidation.nuspec
+++ b/packaging/nuget/fubuvalidation.nuspec
@@ -1,5 +1,5 @@
-<?xml version="1.0"?>
-<package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>FubuValidation</id>
     <version>0.0</version>
@@ -13,10 +13,10 @@
     <tags>fubu validation fubumvc conventional</tags>
     <dependencies>
       <dependency id="FubuLocalization" />
-      <dependency id="FubuCore" version="[1.0.0.0,2.0.0.0)" />
+      <dependency id="FubuCore" version="1.4.0.282" />
     </dependencies>
   </metadata>
-  <files>
+  <files xmlns="">
     <file src="..\..\src\FubuValidation\bin\Release\FubuValidation*" target="lib" />
   </files>
 </package>
