--- a/src/FubuMVC.Validation.Docs/FubuMVC.Validation.Docs.csproj
+++ b/src/FubuMVC.Validation.Docs/FubuMVC.Validation.Docs.csproj
@@ -55,8 +55,7 @@
   <ItemGroup>
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
+  <ItemGroup></ItemGroup>
   <ItemGroup>
     <Content Include="project.xml" />
   </ItemGroup>
