--- a/src/FubuMVC.Validation.Tests/ripple.dependencies.config
+++ b/src/FubuMVC.Validation.Tests/ripple.dependencies.config
@@ -2,13 +2,11 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
-FubuMVC.Core.Assets
-FubuMVC.Core.UI
-FubuMVC.Core.View
 FubuMVC.StructureMap
 FubuTestingSupport
 HtmlTags
 NUnit
+Owin
 RhinoMocks
 structuremap
 structuremap.automocking
