fully passing against fubumvc 2.0

--- a/src/FubuMVC.Validation.Tests/ripple.dependencies.config
+++ b/src/FubuMVC.Validation.Tests/ripple.dependencies.config
@@ -1,15 +1,12 @@
 Bottles
 FubuCore
 FubuLocalization
-FubuMVC.Ajax
 FubuMVC.Core
-FubuMVC.Core.Assets
-FubuMVC.Core.UI
-FubuMVC.Core.View
 FubuMVC.StructureMap
 FubuTestingSupport
 HtmlTags
 NUnit
+Owin
 RhinoMocks
 structuremap
 structuremap.automocking
