--- a/ripple.config
+++ b/ripple.config
@@ -14,10 +14,10 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="2.1.1.586" Mode="Float" />
+    <Dependency Name="Bottles" Version="3.0.0.590" Mode="Float" />
     <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" />
     <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" />
-    <Dependency Name="FubuCore" Version="1.2.0.275" Mode="Float" />
+    <Dependency Name="FubuCore" Version="2.0.0.287" Mode="Float" />
     <Dependency Name="FubuDocs" Version="0.9.9.301" Mode="Float" />
     <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Float" />
     <Dependency Name="FubuMVC.Ajax" Version="2.0.0.504" Mode="Float" />
@@ -25,21 +25,22 @@
     <Dependency Name="FubuMVC.Katana" Version="2.0.0.1764" Mode="Float" />
     <Dependency Name="FubuMVC.Spark" Version="2.0.0.1764" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="2.0.0.1764" Mode="Float" />
-    <Dependency Name="FubuTestingSupport" Version="1.2.0.272" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="2.0.0.287" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
-    <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
+    <Dependency Name="NUnit" Version="2.6.3.0" Mode="Fixed" />
+    <Dependency Name="NUnit.Runners" Version="2.6.3.0" Mode="Float" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6" Mode="Fixed" />
     <Dependency Name="Selenium.RC" Version="2.39.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.Support" Version="2.39.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriver" Version="2.39.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.39.0.0" Mode="Fixed" />
-    <Dependency Name="Serenity" Version="0.10.0.286" Mode="Float" />
+    <Dependency Name="Serenity" Version="0.10.0.295" Mode="Float" />
     <Dependency Name="Spark" Version="1.7.5.3" Mode="Float" />
     <Dependency Name="Storyteller2" Version="2.0.0.60" Mode="Float" />
-    <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
-    <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
+    <Dependency Name="structuremap" Version="3.0.3.116" Mode="Fixed" />
+    <Dependency Name="structuremap.automocking" Version="3.0.3.116" Mode="Fixed" />
   </Nugets>
   <Groups />
   <References>
