--- a/src/FubuMVC.Validation/FubuMVC.Validation.csproj
+++ b/src/FubuMVC.Validation/FubuMVC.Validation.csproj
@@ -132,7 +132,7 @@
     <Compile Include="ValidationActionFilter.cs" />
     <Compile Include="ValidationAjaxExtensions.cs" />
     <Compile Include="ValidationBehaviorChainExtensions.cs" />
-    <Compile Include="ValidationConvention.cs" />
+    <Compile Include="ValidationPolicy.cs" />
     <Compile Include="ValidationFilter.cs" />
     <Compile Include="ValidationModeAttributePolicy.cs" />
     <Compile Include="ValidationNode.cs" />
