--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -40,6 +40,9 @@
     <Reference Include="FubuLocalization">
       <HintPath>..\packages\FubuLocalization\lib\FubuLocalization.dll</HintPath>
     </Reference>
+    <Reference Include="FubuMVC.Ajax">
+      <HintPath>..\packages\FubuMVC.Ajax\lib\net40\FubuMVC.Ajax.dll</HintPath>
+    </Reference>
     <Reference Include="FubuMVC.Core">
       <HintPath>..\packages\FubuMVC.Core\lib\net40\FubuMVC.Core.dll</HintPath>
     </Reference>
@@ -102,6 +105,7 @@
     <Compile Include="AjaxValidationActionFilterTester.cs" />
     <Compile Include="AjaxValidationFailureHandlerTester.cs" />
     <Compile Include="AssemblyNeedsTheFubuModuleAttribute.cs" />
+    <Compile Include="Bugs\defining_field_rules_on_a_base_class_is_not_catching_on_the_subclass.cs" />
     <Compile Include="CompositeChainFilterTester.cs" />
     <Compile Include="default_validation_services.cs" />
     <Compile Include="FubuValidationServiceRegistryTester.cs" />
