--- a/ripple.config
+++ b/ripple.config
@@ -30,7 +30,7 @@
     <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1678" Mode="Float" />
     <Dependency Name="FubuMVC.TestingHarness" Version="1.2.0.1678" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.272" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Fixed" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
