--- a/ripple.config
+++ b/ripple.config
@@ -26,7 +26,7 @@
     <Dependency Name="FubuMVC.Spark" Version="2.0.0.1764" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="2.0.0.1764" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="2.0.0.287" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Fixed" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.6.3.0" Mode="Fixed" />
     <Dependency Name="NUnit.Runners" Version="2.6.3.0" Mode="Float" />
