--- a/src/FubuMVC.Validation.StoryTeller/ripple.dependencies.config
+++ b/src/FubuMVC.Validation.StoryTeller/ripple.dependencies.config
@@ -3,7 +3,6 @@ Castle.Core
 DotNetZip
 FubuCore
 FubuLocalization
-FubuMVC.Ajax
 FubuMVC.Core
 FubuMVC.Katana
 FubuMVC.StructureMap
@@ -15,5 +14,5 @@ Selenium.Support
 Selenium.WebDriver
 Selenium.WebDriverBackedSelenium
 Serenity
-Storyteller2
+Storyteller
 structuremap
