--- a/ripple.config
+++ b/ripple.config
@@ -8,39 +8,38 @@
   <DefaultFloatConstraint>Current</DefaultFloatConstraint>
   <DefaultFixedConstraint>Current,NextMajor</DefaultFixedConstraint>
   <Feeds>
-    <Feed Url="https://www.myget.org/F/fubumvc-edge" Mode="Fixed" Stability="ReleasedOnly" />
+    <Feed Url="https://www.myget.org/F/fubumvc-edge" Mode="Fixed" Stability="Anything" />
     <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" Stability="ReleasedOnly" />
-    <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="ReleasedOnly" />
-    <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="ReleasedOnly" />
+    <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="Anything" />
+    <Feed Url="http://packages.nuget.org/v1/FeedService.svc/" Mode="Fixed" Stability="Anything" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="3.0.0.590" Mode="Float" />
+    <Dependency Name="Bottles" Version="3.0.0.618" Mode="Fixed" />
     <Dependency Name="Castle.Core" Version="3.0.0.4001" Mode="Fixed" />
     <Dependency Name="DotNetZip" Version="1.9.1.8" Mode="Fixed" />
-    <Dependency Name="FubuCore" Version="2.0.0.287" Mode="Float" />
-    <Dependency Name="FubuDocs" Version="0.9.9.301" Mode="Float" />
-    <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Float" />
-    <Dependency Name="FubuMVC.Ajax" Version="2.0.0.504" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="2.0.0.1764" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="2.0.0.1764" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="2.0.0.1764" Mode="Float" />
-    <Dependency Name="FubuMVC.StructureMap" Version="2.0.0.1764" Mode="Float" />
-    <Dependency Name="FubuTestingSupport" Version="2.0.0.287" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Fixed" />
+    <Dependency Name="FubuCore" Version="2.0.0.311" Mode="Fixed" />
+    <Dependency Name="FubuDocs" Version="0.9.9.301" Mode="Fixed" />
+    <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Fixed" />
+    <Dependency Name="FubuMVC.Core" Version="2.1.1.1952" Mode="Fixed" />
+    <Dependency Name="FubuMVC.Katana" Version="2.1.1.1952" Mode="Fixed" />
+    <Dependency Name="FubuMVC.Spark" Version="2.1.1.1952" Mode="Fixed" />
+    <Dependency Name="FubuMVC.StructureMap" Version="2.1.1.1952" Mode="Fixed" />
+    <Dependency Name="FubuTestingSupport" Version="2.0.0.287" Mode="Fixed" />
+    <Dependency Name="HtmlTags" Version="2.1.0.183" Mode="Fixed" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.6.3.0" Mode="Fixed" />
-    <Dependency Name="NUnit.Runners" Version="2.6.3.0" Mode="Float" />
+    <Dependency Name="NUnit.Runners" Version="2.6.3.0" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6" Mode="Fixed" />
-    <Dependency Name="Selenium.RC" Version="2.39.0.0" Mode="Fixed" />
-    <Dependency Name="Selenium.Support" Version="2.39.0.0" Mode="Fixed" />
-    <Dependency Name="Selenium.WebDriver" Version="2.39.0.0" Mode="Fixed" />
-    <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.39.0.0" Mode="Fixed" />
-    <Dependency Name="Serenity" Version="0.10.0.295" Mode="Float" />
-    <Dependency Name="Spark" Version="1.7.5.3" Mode="Float" />
-    <Dependency Name="Storyteller2" Version="2.0.0.60" Mode="Float" />
-    <Dependency Name="structuremap" Version="3.0.3.116" Mode="Fixed" />
-    <Dependency Name="structuremap.automocking" Version="3.0.3.116" Mode="Fixed" />
+    <Dependency Name="Selenium.RC" Version="2.45.0.0" Mode="Fixed" />
+    <Dependency Name="Selenium.Support" Version="2.45.0.0" Mode="Fixed" />
+    <Dependency Name="Selenium.WebDriver" Version="2.45.0.0" Mode="Fixed" />
+    <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.45.0.0" Mode="Fixed" />
+    <Dependency Name="Serenity" Version="2.1.1.1952" Mode="Fixed" />
+    <Dependency Name="Spark" Version="1.7.5.3" Mode="Fixed" />
+    <Dependency Name="Storyteller" Version="3.0.0.173-alpha" Mode="Fixed" />
+    <Dependency Name="structuremap" Version="3.1.5.168" Mode="Fixed" />
+    <Dependency Name="structuremap.automocking" Version="3.1.5.168" Mode="Fixed" />
   </Nugets>
   <Groups />
   <References>
