--- a/packaging/nuget/fubuvalidation.structuremap.nuspec
+++ b/packaging/nuget/fubuvalidation.structuremap.nuspec
@@ -13,7 +13,7 @@
     <tags>fubu validation fubumvc conventional</tags>
     <dependencies>
       <dependency id="FubuValidation" />
-      <dependency id="structuremap" version="[2.6.3,3.0)" />
+      <dependency id="structuremap" version="[3.0,3.2]" />
     </dependencies>
   </metadata>
   <files>
