--- a/ripple.config
+++ b/ripple.config
@@ -26,6 +26,7 @@
     <Dependency Name="FubuMVC.StructureMap" Version="2.1.1.1952" Mode="Fixed" />
     <Dependency Name="FubuTestingSupport" Version="2.0.0.287" Mode="Fixed" />
     <Dependency Name="HtmlTags" Version="2.1.0.183" Mode="Fixed" />
+    <Dependency Name="Microsoft.Owin.Host.HttpListener" Version="3.0.1.0" Mode="Fixed" />
     <Dependency Name="Newtonsoft.Json" Version="4.5.11" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.6.3.0" Mode="Fixed" />
     <Dependency Name="NUnit.Runners" Version="2.6.3.0" Mode="Fixed" />
